--- a/assets/style.css
+++ b/assets/style.css
@@ -13,7 +13,7 @@
     --neutral-pale-blue: hsl(221, 100%, 96%);
     --neutral-dark-gray-blue: hsl(224, 30%, 27%);
 
-    --max-width-card: 600px;
+    --max-width-card: 37.5rem;
 }
 
 * {
@@ -61,7 +61,7 @@ a {
 
 body {
     font-family: 'Hanken Grotesk', sans-serif;
-    font-size: 18px;
+    font-size: 1.125rem;
 }
 
 .card {
@@ -77,26 +77,26 @@ body {
         var(--gradient-light-slate-blue), 
         var(--gradient-light-royal-blue)
     );
-    padding: 20px 40px;
+    padding: 1.25rem 2.5rem;
 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 0.625rem;
 
-    border-bottom-left-radius: 30px;
-    border-bottom-right-radius: 30px;
+    border-bottom-left-radius: 1.875rem;
+    border-bottom-right-radius: 1.875rem;
 }
 
 .card__header .badge,
 .card__header .total {
     opacity: 0.6;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .card__header .badge {
-    margin-bottom: 10px;
+    margin-bottom: 0.625rem;
 }
 
 .card__header .compter {
@@ -106,63 +106,63 @@ body {
         var(--gradient-persian-blue) 97%
     );
     position: relative;
-    width: 127px;
-    height: 120px;
+    width: 7.9375rem;
+    height: 7.5rem;
     border-radius: 100%;
-    padding: 30px;
+    padding: 1.875rem;
     border: none;
-    margin-bottom: 10px;
+    margin-bottom: 0.625rem;
 }
 
 .compter .circle {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    top: 25px;
+    top: 1.5625rem;
 }
 
 .card__header .participation__percent {
-    font-size: 50px;
+    font-size: 3.125rem;
     font-weight: 800;
 }
 
 .card__header__content {
-    font-size: 14px;
+    font-size: 0.875rem;
     opacity: 0.6;
-    margin-bottom: 10px;
+    margin-bottom: 0.625rem;
 }
 
 .card__body {
-    padding: 25px;
+    padding: 1.5625rem;
 }
 
 .card__body__title {
     font-size: 0.83em;
     color: var(--neutral-dark-gray-blue);
-    margin-bottom: 20px;
+    margin-bottom: 1.25rem;
 }
 
 .card__body__content {
     display: flex;
     flex-direction: column;
-    gap: 15px;
-    margin-bottom: 15px;
-    font-size: 14px;
+    gap: 0.9375rem;
+    margin-bottom: 0.9375rem;
+    font-size: 0.875rem;
 }
 
 .card__body__item {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px;
+    padding: 0.9375rem;
     border: none;
-    border-radius: 12px;
+    border-radius: 0.75rem;
 }
 
 .item__category {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 0.625rem;
 }
 
 .item__icon img {
@@ -177,17 +177,17 @@ body {
 .hundred__percent {
     font-weight: 500;
     opacity: 0.6;
-    margin-left: 5px;
+    margin-left: 0.3125rem;
 }
 
 .card__btn {
     width: 100%;
-    padding: 15px;
+    padding: 0.9375rem;
     font-size: 1rem;
     color: var(--neutral-white);
     background: var(--neutral-dark-gray-blue);
     border: none;
-    border-radius: 40px;
+    border-radius: 2.5rem;
     cursor: pointer;
 }
 
@@ -204,7 +204,7 @@ footer {
 }
 
 .attribution {
-    font-size: 11px;
+    font-size: 0.6875rem;
 }
 
 .attribution a {
@@ -212,7 +212,7 @@ footer {
 }
 
 
-@media screen and (min-width: 800px) {   
+@media screen and (min-width: 50rem) {   
     body {
         background-color: var(--neutral-pale-blue);
     }
@@ -231,44 +231,44 @@ footer {
 
     .card__header {
         width: calc(var(--max-width-card) * 0.47);
-        border-top-left-radius: 30px;
-        border-top-right-radius: 30px;
+        border-top-left-radius: 1.875rem;
+        border-top-right-radius: 1.875rem;
         z-index: 1;
     }
 
     .card__header .badge {
-        margin-bottom: 16px;
+        margin-bottom: 1rem;
     }
 
     .card__header__title {
         font-size: 1.17em;
-        margin-bottom: 6px;
+        margin-bottom: 0.375rem;
     }
 
     .card__header .compter {
-        width: 157px;
-        height: 150px;
+        width: 9.8125rem;
+        height: 9.375rem;
     }
 
     .compter .circle {
-        top: 30px;
+        top: 1.875rem;
     }
 
     .card__body {
         background-color: var(--neutral-white);
         width: calc(var(--max-width-card) * 0.53);
-        border-top-right-radius: 30px;
-        border-bottom-right-radius: 30px;
-        transform: translateX(-25px);
-        padding-left: 60px;
+        border-top-right-radius: 1.875rem;
+        border-bottom-right-radius: 1.875rem;
+        transform: translateX(-1.5625rem);
+        padding-left: 3.75rem;
     }
 
     .card__body__content {
-        margin-bottom: 30px;
+        margin-bottom: 1.875rem;
     }
 
     .card__btn {
-        padding: 10px;
+        padding: 0.625rem;
     }
 
     footer {
@@ -278,7 +278,7 @@ footer {
     .attribution {
         position: absolute;
         left: 50%;
-        bottom: 10px;
+        bottom: 0.625rem;
         transform: translateX(-50%);
     }
 
